--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -30,7 +30,15 @@
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
+        <li>Put pasta water on to boil</li>
+        <li>Brown the ground beef</li>
+        <li>Cook the bell pepper, onions, and garlic; add back the beef</li>
+        <li>Make the sauce</li>
+        <li>Boil and drain the lasagna noodles</li>
+        <li>Preheat the overn to 375°F.</li>
+        <li>Asseamble the lasagna</li>
+        <li>Bake</li>
+        <li>Cool and serve</li>
     </ol>
 </body>
 </html>
